[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "abc009_c"
path = "./abc/abc009/c.rs"

[[bin]]
name = "abc015_c"
path = "./abc/abc015/c.rs"

[[bin]]
name = "abc016_c"
path = "./abc/abc016/c.rs"

[[bin]]
name = "abc017_c"
path = "./abc/abc017/c.rs"

[[bin]]
name = "abc018_a"
path = "./abc/abc018/a.rs"

[[bin]]
name = "abc018_b"
path = "./abc/abc018/b.rs"

[[bin]]
name = "abc018_c"
path = "./abc/abc018/c.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
